4.0.12
Merged from 3.11:
 * Moved jflex from runtime to build dependencies (CASSANDRA-18664)
Merged from 3.0:


4.0.11
 * Revert CASSANDRA-16718 (CASSANDRA-18560)
 * Upgrade snappy to 1.1.10.1 (CASSANDRA-18608)
 * Fix assertion error when describing mv as table (CASSANDRA-18596)
 * Track the amount of read data per row (CASSANDRA-18513)
 * Fix Down nodes counter in nodetool describecluster (CASSANDRA-18512)
 * Remove unnecessary shuffling of GossipDigests in Gossiper#makeRandomGossipDigest (CASSANDRA-18546)
Merged from 3.11:
 * Fix CAST function for float to decimal (CASSANDRA-18647)
 * Suppress CVE-2022-45688 (CASSANDRA-18643)
 * Remove unrepaired SSTables from garbage collection when only_purge_repaired_tombstones is true (CASSANDRA-14204)
 * Wait for live endpoints in gossip waiting to settle (CASSANDRA-18543)
 * Fix error message handling when trying to use CLUSTERING ORDER with non-clustering column (CASSANDRA-17818
 * Add keyspace and table name to exception message during ColumnSubselection deserialization (CASSANDRA-18346)
Merged from 3.0:
 * Suppress CVE-2023-34462 (CASSANDRA-18649)
 * Add support for AWS Ec2 IMDSv2 (CASSANDRA-16555)
 * Suppress CVE-2023-35116 (CASSANDRA-18630)
 * Pass taskId from CompactionTask to system.compaction_history (CASSANDRA-12183)
 * Backport CASSANDRA-10508: Remove hard-coded SSL cipher suites (CASSANDRA-18575)
 * Suppress CVE-2023-2976 (CASSANDRA-18562)
 * Remove dh_python use in Debian packaging (CASSANDRA-18558)


4.0.10
 * Improve nodetool enable{audit,fullquery}log (CASSANDRA-18550)
 * Report network cache info in nodetool (CASSANDRa-18400)
 * Partial compaction can resurrect deleted data (CASSANDRA-18507)
 * Allow internal address to change with reconnecting snitches (CASSANDRA-16718)
 * Fix quoting in toCqlString methods of UDTs and aggregates (CASSANDRA-17918)
 * NPE when deserializing malformed collections from client (CASSANDRA-18505)
 * Improve 'Not enough space for compaction' logging messages (CASSANDRA-18260)